--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.hibernate.ddl-auto=none  
+spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.url=jdbc:mysql://localhost:3306/sridhar
-spring.datasource.username=hari
-spring.datasource.password=ponsmahi1
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.username=sridhar
+spring.datasource.password=password
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
